# cleopatra

./: .gitignore  CMakeLists.txt  CleopatraSD_Scheduler.xml  FILE  IMPORTANT.md  INSTALL.md  NEXT.txt  README.md  com.cleopatra.daemon.rc  package-lock.json  wrangler.toml
.github/workflows/: win-build.yml
daemon/: cleopatra.cpp  cleopatra.go  com.cleopatra.daemon.rc  daemon.cpp  go.mod
setup/: installer.ifp
worker/: index.js  wrangler.toml
